# usbwall

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  Makefile  README.md  TODO.md  USE_DOXYGEN.md  USE_GRAPH.md  bootstrap  usbwall.cfg.sample
cmake/Modules/: FindLDAP.cmake  FindPAM.cmake  FindUSB1.cmake
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  backend_file.c  backend_file.h  backend_ldap.c  backend_ldap.h  complete_id.c  complete_id.h  config.c  config.h  core.c  core.h  daemon_main.c  devusb.c  devusb.h  devuser.c  devuser.h  format_validity.c  format_validity.h  ipc_pam.c  ipc_pam.h  ldap_config.c  ldap_config.h  main.c  main.h  parser.c  parser.h  server.c  server.h  socket.c  socket.h  usb_access.c  usb_access.h  uw_pid.c  uw_pid.h  uw_signal.c  uw_signal.h
src/devidd_ctl/: CMakeLists.txt  client.c  client.h  main.c  main.h  server.c  server.h
src/include/: event.h  uds.h
src/ldap/: devuser.ldif  devuser.schema  usbwall.cfg
src/misc/: CMakeLists.txt  debug.h  error_handler.c  error_handler.h  linked_list.c  linked_list.h
src/pam/: CMakeLists.txt  pam_usbwall.c
src/test/: CMakeLists.txt  daemon_format_validity_test.c  daemon_main_test.c  daemon_parser_test.c  daemon_usb_access_test.c  daemon_uw_pid_test.c  usbwall_main_test.c
